# buddy-mcp

./: .gitignore  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.ko.md  README.md  mcp-config.example.json  mcp-config.from-source.json  mcp-config.test.json  pyproject.toml  run.py  run_motor.py  server.py
.cursor/: README.md  mcp.json
comm/: buddy_channel.py  buddy_protocol.py  eliochannel.py  elioprotocol.py  packet_t.py  protocol.py
