[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elio-mcp-server"
version = "0.1.0"
description = "MCP server for Elio/LAO board over Bluetooth serial (DC motor, servo, IO, sensors)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "elio robotics", email = "caram88@mobilian.biz" }
]
maintainers = [
  { name = "johnsnow-nam" }
]
keywords = ["mcp", "elio", "serial", "bluetooth", "motor", "servo"]
urls = { Homepage = "https://github.com/johnsnow-nam/elio-mcp-server", Repository = "https://github.com/johnsnow-nam/elio-mcp-server", "Bug Tracker" = "https://github.com/johnsnow-nam/elio-mcp-server/issues" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0.0",
  "pyserial>=3.5",
]

[project.scripts]
elio-mcp = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["comm*"]

[tool.setuptools]
py-modules = ["server"]
