[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-mcp-server"
version = "0.1.0"
description = "MCP server for compatible board over Bluetooth serial (DC motor, servo, IO, sensors)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Buddy MCP Server", email = "caram88@mobilian.biz" }
]
maintainers = [
  { name = "johnsnow-nam" }
]
keywords = ["mcp", "buddy", "serial", "bluetooth", "motor", "servo"]
urls = { Homepage = "https://github.com/johnsnow-nam/buddy-mcp", Repository = "https://github.com/johnsnow-nam/buddy-mcp", "Bug Tracker" = "https://github.com/johnsnow-nam/buddy-mcp/issues" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.0.0",
  "pyserial>=3.5",
]

[project.scripts]
buddy-mcp = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["comm*"]

[tool.setuptools]
py-modules = ["server"]
